--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "description": "Test with php unit",
     "type": "project",
     "require-dev": {
-        "phpunit/phpunit": "9.5.x-dev"
+        "phpunit/phpunit": "9.5.x-dev",
+        "friendsofphp/php-cs-fixer": "3.0.x-dev",
+        "squizlabs/php_codesniffer": "4.0.x-dev",
+        "pablo-sg-pacheco/wp-namespace-autoloader": "dev-master",
+        "wp-cli/wp-cli-bundle": "2.5.x-dev",
+        "wp-coding-standards/wpcs ": "*"
     },
     "license": "MIT",
     "autoload": {
@@ -18,5 +23,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php-di/php-di": "6.3.4"
+    }
 }
