--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.idea/
+# PhpStorm
+/.idea
 
+# Composer
+/vendor
 composer.phar
-/vendor/
+
+# PHPUnit
+/.phpunit.cache
+.phpunit.result.cache
+
+# PHP CS Fixer
+.php_cs.cache
+.php-cs-fixer.cache
