--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,9 @@
     "type": "project",
     "require-dev": {
         "phpunit/phpunit": "9.5.x-dev",
-        "friendsofphp/php-cs-fixer": "3.0.x-dev",
-        "squizlabs/php_codesniffer": "4.0.x-dev",
-        "pablo-sg-pacheco/wp-namespace-autoloader": "dev-master",
         "wp-cli/wp-cli-bundle": "2.5.x-dev",
-        "wp-coding-standards/wpcs ": "*"
+        "php-di/php-di": "6.3.4",
+        "wp-coding-standards/wpcs": "2.3.0"
     },
     "license": "MIT",
     "autoload": {
@@ -24,6 +22,6 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php-di/php-di": "6.3.4"
+
     }
 }
